--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,5 +1,7 @@
 {
-	"sec-smart adapter settings": "Adaptereinstellungen für sec-smart",
-	"option1": "Option 1",
-	"option2": "Option 2"
+    "sec-smart adapter settings": "Adaptereinstellungen für sec-smart",
+    "API URL": "API-URL",
+    "Fill in the SEC-Smart API URL": "Geben Sie die SEC-Smart-API-URL ein",
+    "API Token": "API-Token",
+    "Fill in your API Token from your SEC-Smart Gateway": "Geben Sie Ihren API-Token von Ihrem SEC-Smart Gateway ein"
 }
