--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -1,5 +1,7 @@
 {
-	"sec-smart adapter settings": "Impostazioni dell'adattatore per sec-smart",
-	"option1": "opzione 1",
-	"option2": "opzione 2"
+    "sec-smart adapter settings": "Impostazioni dell'adattatore per SEC-Smart",
+    "API URL": "URL dell'API",
+    "Fill in the SEC-Smart API URL": "Compila l'URL dell'API SEC-Smart",
+    "API Token": "Token API",
+    "Fill in your API Token from your SEC-Smart Gateway": "Compila il tuo token API dal tuo SEC-Smart Gateway"
 }
