--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,5 +1,7 @@
 {
-	"sec-smart adapter settings": "Configurações do adaptador para sec-smart",
-	"option1": "Opção 1",
-	"option2": "opção 2"
+    "sec-smart adapter settings": "Configurações do adaptador para SEC-Smart",
+    "API URL": "URL da API",
+    "Fill in the SEC-Smart API URL": "Preencha o URL da API SEC-Smart",
+    "API Token": "Token da API",
+    "Fill in your API Token from your SEC-Smart Gateway": "Preencha seu API Token do seu SEC-Smart Gateway"
 }
